# flerovium

./: .gitignore  README.md  README.rst  cifar_net.pth  cnn.html  flerovium.py  package-lock.json  requirements.txt  setup.cfg  sign_up.html  wget-log
.github/workflows/: codecov.yml
app/http/api/: cnn.py  endpoints.py  helper.py  helper_cnn.py  helper_db.py  helper_logging.py
data/: about.json  data_store.json
keras_notebooks/: BoBox.ipynb  ImgCls.ipynb  ImgClsAuth.ipynb  Pascal.ipynb  keras-1.ipynb  keras-2.ipynb  keras-3.ipynb  keras-4.ipynb  keras-5.ipynb  keras-6.ipynb
keras_notebooks/auth_data/: labels.csv
keras_notebooks/auth_data/tmp2/: labels-1.csv
keras_notebooks/login/Annotations/: 0035a214-blogtalkradio.com.xml  007b5197-disqus.com.xml  02368e2a-libsyn.com.xml  052807ed-eventbrite.ca.xml  06009b20-goodmorningamerica.com.xml  06ab3de2-smellgoodoil.com.xml  0b964a83-openlearning.com.xml  0c300916-serverfault.com.xml  0eb6661a-jamieoliver.com.xml  0eb8da98-zapier.com.xml  106cf2e2-squarespace.com.xml  11da398f-cplusplus.com.xml  (+161 more)
src/: client.py  cnn_builder.py  db.py  file_helper.py  helper.py  html.py  html_selenium.py  image_compare.py  image_text.py  logging.py  tag.py
src/cnn/: classifier.py  classifier2.py  create_html_samples.py  custom_dataset_from_csv.py  image_dataset.py  neural_network.py
src/models/: sign_in.json
tests/: test_cnn.py  test_db.py  test_find_by_bet365.py  test_find_by_label.py  test_find_by_netflix.py  test_find_by_ted.py  test_image_compare.py  test_login_cnn.py  test_loop_browser.py  test_sign_in_netflix.py
(+15 files in other folders)
