[flake8]
max-line-length = 200
exclude = tests/*,docs/*,__init__.py
extend-ignore = D202,N802

[metadata]
name = flerovium
description = find_by_label
long_description = file: README.rst, LICENSE.rst
long_description_content_type = text/x-rst
version = 0.0.75
author = Sam Treweek
author_email = samtreweek@gmail.com
url = https://github.com/serialbandicoot/flerovium
project_urls =
    Source code = https://github.com/serialbandicoot/flerovium
    Issue tracker = https://github.com/serialbandicoot/flerovium/issues
license = MIT
keywords = timezone
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >= 3.6
zip_safe = True
py_modules = flerovium

[options.packages.find]
include = src

[options.extras_require]
test =
    pytest >= 4.3
devenv =
    pytest-cov
    black
    pyroma
    zest.releaser

[zest.releaser]
create-wheel = yes

[coverage:run]
omit=setup.py, *tests*

[tool.black]
line-length = 120

[options.entry_points]
console_scripts =
  flerovium_web = src.web.run:cli